# aleatoric-composer

./: .gitignore  CDP_Cheatsheet_A3.html  FEATURES.md  Mapa_Tecnicas_Efectos.drawio  aleatoric_composer.spec  gen_catalogo_pdf.py  gen_cdp_cheatsheet_pdf.py  gen_integracion_efectos_pdf.py  gen_mapa_tecnicas_efectos.py  gen_tecnicas_compositivas_pdf.py  pyproject.toml  requirements.txt
.github/workflows/: build.yml
hooks/: rthook_block_network.py
src/: main.py
src/core/: audio_buffer.py  audio_io.py
src/core/composition/: arranger.py  constraints.py  rng.py  strategies.py  timeline.py
src/core/effects/: base.py  chain.py  granular.py  pedalboard_effects.py  spectral.py  time_stretch.py
src/core/render/: exporter.py  mixer.py  renderer.py
src/gui/: main_window.py
src/gui/styles/: theme.py
src/gui/widgets/: composition_panel.py  effects_panel.py  parameter_controls.py  source_panel.py  timeline_view.py  waveform_view.py
src/utils/: constants.py
tests/: test_advanced_effects.py  test_end_to_end.py
